--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
+  background-color: #282c34;
+}
+.App h1 {
   text-align: center;
 }
-
 .App-logo {
   height: 20vmin;
   pointer-events: none;
@@ -14,11 +16,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -35,4 +35,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App footer {
+  color: #61dafb;
+  text-align: center;
 }
