--- a/src/WeatherSearch.css
+++ b/src/WeatherSearch.css
@@ -1,10 +1,10 @@
 .SearchForm {
   text-align: center;
   margin: 0 auto;
-}
+ }
 
 .WeatherSearch h3{
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 20px;
 }
 
@@ -16,7 +16,10 @@
 .WeatherSearch .Weather{
      margin-left: 20px;
 }
+.Weather img{
+  height: 90px;
+ }
 .CurrentTemperature {
-  font-size: 60px;
+  font-size: 50px;
   line-height: 1.5;
 }
